RESOLVED FIXED24707
Deleting with a caret in a blank, quoted line decreases the quoting, but does not delete the line
https://bugs.webkit.org/show_bug.cgi?id=24707
Summary Deleting with a caret in a blank, quoted line decreases the quoting, but does...
Adele Peterson
Reported 2009-03-19 17:05:55 PDT
Deleting with a caret in a blank, quoted line decreases the quoting, but does not delete the line Open the attached test case and hit delete. You'll see the quoting get deleted, but not the empty line, which is the expected behavior. <rdar://problem/6593021>
Attachments
test case (613 bytes, text/html)
2009-03-19 17:07 PDT, Adele Peterson
no flags
patch (7.10 KB, patch)
2009-03-24 17:48 PDT, Adele Peterson
darin: review+
Adele Peterson
Comment 1 2009-03-19 17:07:00 PDT
Created attachment 28773 [details] test case
Adele Peterson
Comment 2 2009-03-24 17:48:56 PDT
Darin Adler
Comment 3 2009-03-24 17:53:42 PDT
Comment on attachment 28919 [details] patch r=me
Adele Peterson
Comment 4 2009-03-24 17:58:18 PDT
Committed revision 41962.
Note You need to log in before you can comment on or make changes to this bug.